--- a/src/app/property/add-property/add-property.component.html
+++ b/src/app/property/add-property/add-property.component.html
@@ -587,7 +587,7 @@
                       />
                     </div>
 
-                    <div class="form-group col-md-6">
+                    <!-- <div class="form-group col-md-6">
                       <label for="">Water Availability</label>
                       <input
                         class="form-control"
@@ -595,6 +595,18 @@
                         formControlName="WaterAvailability"
                         maxlength="10"
                       />
+                    </div> -->
+
+                    <div class="form-group col-md-6">
+                      <label for="">Water Availability</label>
+                      <select
+                        class="form-control"
+                        placeholder="Water Availability"
+                        formControlName="WaterAvailability"
+                      >
+                        <option value="Yes" selected>Yes</option>
+                        <option value="No">No</option>
+                      </select>
                     </div>
 
                     <div class="form-group col-md-6">
@@ -603,7 +615,8 @@
                         class="custom-select"
                         formControlName="FurnishType"
                       >
-                        <option value="Full Furnished" id="4" selected>
+                        <option value="" selected></option>
+                        <option value="Full Furnished" id="4">
                           Full Furnished
                         </option>
                         <option value="Semi Furnished" id="9">
@@ -619,9 +632,8 @@
                         class="custom-select"
                         formControlName="StatusOfElectricity"
                       >
-                        <option value="No PowerCut" id="3" selected>
-                          No PowerCut
-                        </option>
+                        <option value="" selected></option>
+                        <option value="No PowerCut" id="3">No PowerCut</option>
                         <option value="Rare PoweCut" id="5">
                           Rare PoweCut
                         </option>
@@ -672,7 +684,8 @@
                     >
                       <label for="">No. of BHK</label>
                       <select class="custom-select" formControlName="NoOfBHK">
-                        <option value="1" id="4" selected>1</option>
+                        <option value="" id="4" selected></option>
+                        <option value="1" id="4">1</option>
                         <option value="2" id="1">2</option>
                         <option value="3" id="3">3</option>
                         <option value="4" id="4">4</option>
@@ -699,6 +712,7 @@
                           let i = index
                         "
                       >
+                        ({{ i + 1 }})
                         <div class="form-row" [formGroupName]="i">
                           <div class="form-group col-md-6">
                             <label>Owner Name</label>
@@ -713,7 +727,7 @@
                                   f.OwnerShip['controls'][i]['controls']
                                     .OwnerName.errors
                               }"
-                              pattern="[a-zA-Z][a-zA-Z-, ]+"
+                              pattern="[a-zA-Z][a-zA-Z ]+"
                             />
                             <div
                               *ngIf="
@@ -741,6 +755,7 @@
                               formControlName="SinceFrom"
                             />
                           </div>
+
                           <div class="form-group col-md-12">
                             <span
                               class="glyphicon glyphicon-remove pull-right"
@@ -752,14 +767,15 @@
                             >
                               (Remove -)
                             </span>
+                            <hr />
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
                   <div class="margin-20">
-                    <a (click)="addOwner()" style="cursor: pointer">
-                      Add owner +
+                    <a (click)="addOwner()" style="cursor: pointer"
+                      ><b> Add Owner +</b>
                     </a>
                   </div>
                   <h5
@@ -780,7 +796,8 @@
                         "
                         class="panel panel-default"
                       >
-                        <div class="panel-heading">
+                        ({{ i + 1 }})
+                        <!-- <div class="panel-heading">
                           <span
                             class="glyphicon glyphicon-remove pull-right"
                             style="cursor: pointer; color: red"
@@ -791,7 +808,7 @@
                           >
                             (Remove -)
                           </span>
-                        </div>
+                        </div> -->
                         <div class="form-row" [formGroupName]="i">
                           <div class="form-group col-md-6">
                             <label>InChargeName</label>
@@ -806,7 +823,7 @@
                                     .InChargeName.errors
                               }"
                               maxlength="25"
-                              pattern="[a-zA-Z][a-zA-Z ]+"
+                              pattern="[a-zA-Z ]+"
                             />
                             <div
                               *ngIf="
@@ -901,12 +918,25 @@
                             />
                           </div>
                         </div>
+                        <div class="form-group col-md-12">
+                          <span
+                            class="glyphicon glyphicon-remove pull-right"
+                            style="cursor: pointer; color: red"
+                            *ngIf="
+                              myForm.controls.InCharge['controls'].length > 1
+                            "
+                            (click)="removeIncharge(i)"
+                          >
+                            (Remove -)
+                          </span>
+                          <hr />
+                        </div>
                       </div>
                     </div>
                   </div>
                   <div class="">
                     <a (click)="addIncharge()" style="cursor: pointer">
-                      Add InCharge +
+                      <b>Add InCharge +</b>
                     </a>
                   </div>
                   <hr
