--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -1,5 +1,5 @@
 <!-- Topbar Start -->
-<div class="navbar-custom">
+<div class="navbar-custom" *ngIf="currentUser">
   <ul class="list-unstyled topnav-menu float-right mb-0">
     <!-- <li class="d-none d-sm-block">
       <form class="app-search">
