--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -2,15 +2,15 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-6">
-        Copyright © 2020 <a href="">proplegit.com</a> All rights reserved
+        Copyright © 2021 <a href="">proplegit.com</a> All rights reserved
       </div>
-      <div class="col-md-6">
+      <!-- <div class="col-md-6">
         <div class="text-md-right footer-links d-none d-sm-block">
           <a href="javascript:void(0);">About Us</a>
           <a href="javascript:void(0);">Help</a>
           <a href="javascript:void(0);">Contact Us</a>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </footer>
