--- a/src/app/property/view-property/view-property.component.html
+++ b/src/app/property/view-property/view-property.component.html
@@ -73,7 +73,7 @@
               <td>{{ data.BuildingNo }}</td>
             </tr>
             <tr *ngIf="data.RevenewOfficeType">
-              <th>RevenewOffice Type</th>
+              <th>Revenue Office Type</th>
               <td>:</td>
               <td>{{ data.RevenewOfficeType }}</td>
             </tr>
